--- a/docs/examples/pca9685.md
+++ b/docs/examples/pca9685.md
@@ -5,7 +5,7 @@
 
 ## 概要
 
-I2C 接続の PWM ドライバー経由でサーボモーターを駆動します。（Raspberry から PWM ドライバーを I2C 接続し、 PWM ドライバとサーボモータ、外部電源を接続します。詳細は回路図を参照ください）
+I2C 接続の PWM ドライバー経由でサーボモーターを駆動します。（Raspberry Piから PWM ドライバーを I2C 接続し、 PWM ドライバとサーボモータ、外部電源を接続します。詳細は回路図を参照ください）
 
 ## 使用パーツ
 
