Add the link to the driver repo

--- a/docs/examples/adt7410.md
+++ b/docs/examples/adt7410.md
@@ -16,3 +16,7 @@ I2C 接続の温度センサー「ADT7410」を用いて温度を計測し表示
 
 - [ADT7410 使用高精度・高分解能 I2C・16Bit 温度センサモジュール](http://akizukidenshi.com/catalog/g/gM-06675/) x 1
 - ジャンパー（メス・メス）ケーブル x 4
+
+## 使い方の詳細・センサー仕様
+
+ドライバの[リポジトリ](https://github.com/chirimen-oh/chirimen-drivers/tree/master/packages/adt7410)(Github)を参照してください。
