--- a/docs/bme280.md
+++ b/docs/bme280.md
@@ -1,25 +1,21 @@
 # bme280
 
-
-
-- TBD
+- BME280 温湿度・気圧センサー
 
 ## 使用パーツ
 
 - TBD
 
-
-
 ## 配線図
 
-![配線図](../node-examples/bme280/schematic.png "schematic")
+![配線図](./images/bme280/schematic.png 'schematic')
 
 ## サンプルコード (main.js)
 
 ```javascript
-const { requestI2CAccess } = require("node-web-i2c");
-const BME280 = require("@chirimen/bme280");
-const { promisify } = require("util");
+const { requestI2CAccess } = require('node-web-i2c');
+const BME280 = require('@chirimen/bme280');
+const { promisify } = require('util');
 const sleep = promisify(setTimeout);
 
 main();
@@ -39,14 +35,14 @@ async function main() {
       [
         `Temperature: ${temperature} degree`,
         `Humidity: ${humidity} %`,
-        `Pressure: ${pressure} hPa`
-      ].join(", ")
+        `Pressure: ${pressure} hPa`,
+      ].join(', ')
     );
     await sleep(500);
   }
 }
 ```
 
-
 ---
+
 [← 目次に戻る](./index.md)
