--- a/docs/bmp180.md
+++ b/docs/bmp180.md
@@ -1,25 +1,21 @@
 # bmp180
 
-
-
-- TBD
+- BMP180 気圧/温度/高度センサー
 
 ## 使用パーツ
 
 - TBD
 
-
-
 ## 配線図
 
-![配線図](../node-examples/bmp180/schematic.png "schematic")
+![配線図](./images/bmp180/schematic.png 'schematic')
 
 ## サンプルコード (main.js)
 
 ```javascript
-const { requestI2CAccess } = require("node-web-i2c");
-const BMP180 = require("@chirimen/bmp180");
-const { promisify } = require("util");
+const { requestI2CAccess } = require('node-web-i2c');
+const BMP180 = require('@chirimen/bmp180');
+const { promisify } = require('util');
 const sleep = promisify(setTimeout);
 
 main();
@@ -42,6 +38,6 @@ async function main() {
 }
 ```
 
-
 ---
+
 [← 目次に戻る](./index.md)
