--- a/docs/ina219.md
+++ b/docs/ina219.md
@@ -1,25 +1,21 @@
 # ina219
 
-
-
-- TBD
+- INA219 使用電流センサー
 
 ## 使用パーツ
 
 - TBD
 
-
-
 ## 配線図
 
-![配線図](../node-examples/ina219/schematic.png "schematic")
+![配線図](./images/ina219/schematic.png 'schematic')
 
 ## サンプルコード (main.js)
 
 ```javascript
-const { requestI2CAccess } = require("node-web-i2c");
-const INA219 = require("@chirimen/ina219");
-const { promisify } = require("util");
+const { requestI2CAccess } = require('node-web-i2c');
+const INA219 = require('@chirimen/ina219');
+const { promisify } = require('util');
 const sleep = promisify(setTimeout);
 
 main();
@@ -44,8 +40,8 @@ async function main() {
         `Supply voltage: ${supplyVoltage.toFixed(3)}V`,
         `Current: ${current.toFixed(2)}mA`,
         `Power: ${power.toFixed(2)}mW`,
-        `Shunt voltage: ${shuntVoltage.toFixed(2)}mV`
-      ].join(", ")
+        `Shunt voltage: ${shuntVoltage.toFixed(2)}mV`,
+      ].join(', ')
     );
 
     await sleep(500);
@@ -53,6 +49,6 @@ async function main() {
 }
 ```
 
-
 ---
+
 [← 目次に戻る](./index.md)
