--- a/docs/mpu9250.md
+++ b/docs/mpu9250.md
@@ -1,26 +1,22 @@
 # mpu9250
 
-
-
 - TBD
 
-## 使用パーツ
+## MPU-9250 9 軸ジャイロスコープ加速度計/磁気フィールドセンサー
 
 - TBD
-
-
 
 ## 配線図
 
-![配線図](../node-examples/mpu9250/schematic.png "schematic")
+![配線図](./images/mpu9250/schematic.png 'schematic')
 
 ## サンプルコード (main.js)
 
 ```javascript
-const { requestI2CAccess } = require("node-web-i2c");
-const MPU6500 = require("@chirimen/mpu6500");
-const AK8963 = require("@chirimen/ak8963");
-const { promisify } = require("util");
+const { requestI2CAccess } = require('node-web-i2c');
+const MPU6500 = require('@chirimen/mpu6500');
+const AK8963 = require('@chirimen/ak8963');
+const { promisify } = require('util');
 const sleep = promisify(setTimeout);
 
 main();
@@ -41,8 +37,8 @@ async function main() {
       [
         `Gx: ${g.x}, Gy: ${g.y}, Gz: ${g.z}`,
         `Rx: ${r.x}, Ry: ${r.y}, Rz: ${r.z}`,
-        `Hx: ${h.x}, Hy: ${h.y}, Hz: ${h.z}`
-      ].join("\n")
+        `Hx: ${h.x}, Hy: ${h.y}, Hz: ${h.z}`,
+      ].join('\n')
     );
 
     await sleep(500);
@@ -50,6 +46,6 @@ async function main() {
 }
 ```
 
-
 ---
+
 [← 目次に戻る](./index.md)
