--- a/docs/pcf8591.md
+++ b/docs/pcf8591.md
@@ -1,25 +1,21 @@
 # pcf8591
 
-
-
-- TBD
+- PCF8591 AD/DA 転換モジュール
 
 ## 使用パーツ
 
 - TBD
 
-
-
 ## 配線図
 
-![配線図](../node-examples/pcf8591/schematic.png "schematic")
+![配線図](./images/pcf8591/schematic.png 'schematic')
 
 ## サンプルコード (main.js)
 
 ```javascript
-const { requestI2CAccess } = require("node-web-i2c");
-const PCF8591 = require("@chirimen/pcf8591");
-const { promisify } = require("util");
+const { requestI2CAccess } = require('node-web-i2c');
+const PCF8591 = require('@chirimen/pcf8591');
+const { promisify } = require('util');
 const sleep = promisify(setTimeout);
 
 main();
@@ -34,7 +30,7 @@ async function main() {
   await pcf8591.setDAC(3.3);
 
   while (true) {
-    let output = "";
+    let output = '';
 
     // PCF8591 has 4 channels
     for (let channel = 0; channel < 4; channel++) {
@@ -48,6 +44,6 @@ async function main() {
 }
 ```
 
-
 ---
+
 [← 目次に戻る](./index.md)
