--- a/docs/tcs34725.md
+++ b/docs/tcs34725.md
@@ -1,25 +1,21 @@
 # tcs34725
 
-
-
-- TBD
+- TCS34725 使用 カラーセンサー
 
 ## 使用パーツ
 
 - TBD
 
-
-
 ## 配線図
 
-![配線図](../node-examples/tcs34725/schematic.png "schematic")
+![配線図](./images/tcs34725/schematic.png 'schematic')
 
 ## サンプルコード (main.js)
 
 ```javascript
-const { requestI2CAccess } = require("node-web-i2c");
-const TCS34725 = require("@chirimen/tcs34725");
-const { promisify } = require("util");
+const { requestI2CAccess } = require('node-web-i2c');
+const TCS34725 = require('@chirimen/tcs34725');
+const { promisify } = require('util');
 const sleep = promisify(setTimeout);
 
 main();
@@ -40,8 +36,8 @@ async function main() {
         `R: ${data.r}`,
         `G: ${data.g}`,
         `B: ${data.b}`,
-        `Clear Light: ${data.c}`
-      ].join(", ")
+        `Clear Light: ${data.c}`,
+      ].join(', ')
     );
 
     await sleep(500);
@@ -49,6 +45,6 @@ async function main() {
 }
 ```
 
-
 ---
+
 [← 目次に戻る](./index.md)
