--- a/docs/bmp280.md
+++ b/docs/bmp280.md
@@ -1,25 +1,21 @@
 # bmp280
 
-
-
-- TBD
+- BMP280 気圧/温度センサー
 
 ## 使用パーツ
 
 - TBD
 
-
-
 ## 配線図
 
-![配線図](../node-examples/bmp280/schematic.png "schematic")
+![配線図](./images/bmp280/schematic.png 'schematic')
 
 ## サンプルコード (main.js)
 
 ```javascript
-const { requestI2CAccess } = require("node-web-i2c");
-const BMP280 = require("@chirimen/bmp280");
-const { promisify } = require("util");
+const { requestI2CAccess } = require('node-web-i2c');
+const BMP280 = require('@chirimen/bmp280');
+const { promisify } = require('util');
 const sleep = promisify(setTimeout);
 
 main();
@@ -36,7 +32,7 @@ async function main() {
     const temperature = data.temperature.toFixed(2);
     console.log(
       [`Temperature: ${temperature} degree`, `Pressure: ${pressure} hPa`].join(
-        ", "
+        ', '
       )
     );
 
@@ -45,6 +41,6 @@ async function main() {
 }
 ```
 
-
 ---
+
 [← 目次に戻る](./index.md)
