--- a/docs/mlx90614.md
+++ b/docs/mlx90614.md
@@ -1,25 +1,21 @@
 # mlx90614
 
-
-
 - TBD
 
-## 使用パーツ
+## MLX90614 赤外線温度センサー
 
 - TBD
-
-
 
 ## 配線図
 
-![配線図](../node-examples/mlx90614/schematic.png "schematic")
+![配線図](./images/mlx90614/schematic.png 'schematic')
 
 ## サンプルコード (main.js)
 
 ```javascript
-const { requestI2CAccess } = require("node-web-i2c");
-const MLX90614 = require("@chirimen/mlx90614");
-const { promisify } = require("util");
+const { requestI2CAccess } = require('node-web-i2c');
+const MLX90614 = require('@chirimen/mlx90614');
+const { promisify } = require('util');
 const sleep = promisify(setTimeout);
 
 main();
@@ -38,8 +34,8 @@ async function main() {
     console.log(
       [
         `Object temperature: ${objectTemperature.toFixed(2)} degree`,
-        `Ambient temperature: ${ambientTemperature.toFixed(2)} degree`
-      ].join(", ")
+        `Ambient temperature: ${ambientTemperature.toFixed(2)} degree`,
+      ].join(', ')
     );
 
     await sleep(500);
@@ -47,6 +43,6 @@ async function main() {
 }
 ```
 
-
 ---
+
 [← 目次に戻る](./index.md)
