--- a/docs/mpu6050.md
+++ b/docs/mpu6050.md
@@ -1,25 +1,21 @@
 # mpu6050
 
-
-
-- TBD
+- MPU6050 ３軸ジャイロスコープ・３軸加速度センサー
 
 ## 使用パーツ
 
 - TBD
 
-
-
 ## 回路図
 
-![回路図](../node-examples/mpu6050/schematic.png "schematic")
+![回路図](./images/mpu6050/schematic.png 'schematic')
 
 ## サンプルコード (main.js)
 
 ```javascript
-const { requestI2CAccess } = require("node-web-i2c");
-const MPU6050 = require("@chirimen/mpu6050");
-const { promisify } = require("util");
+const { requestI2CAccess } = require('node-web-i2c');
+const MPU6050 = require('@chirimen/mpu6050');
+const { promisify } = require('util');
 const sleep = promisify(setTimeout);
 
 main();
@@ -38,8 +34,8 @@ async function main() {
       [
         `Temperature: ${temperature} degree`,
         `Gx: ${g[0]}, Gy: ${g[1]}, Gz: ${g[2]}`,
-        `Rx: ${r[0]}, Ry: ${r[1]}, Rz: ${r[2]}`
-      ].join("\n")
+        `Rx: ${r[0]}, Ry: ${r[1]}, Rz: ${r[2]}`,
+      ].join('\n')
     );
 
     await sleep(500);
@@ -47,6 +43,6 @@ async function main() {
 }
 ```
 
-
 ---
+
 [← 目次に戻る](./index.md)
